infra/k3s_migration/archive/test/gitlab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: gitlab
  namespace: infra-tools
#  annotations:
#    kubernetes.io/ingress.class: traefik
#    traefik.ingress.kubernetes.io/router.entrypoints: web
    
spec:
#  ingressClassName: traefik
  ingressClassName: nginx
  
  rules:
  - host: gitlab.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab-infra-webservice-default
            port:
              number: 8181

#apiVersion: traefik.io/v1alpha1
#kind: IngressRoute
#metadata:
#  name: gitlab-ingress
#  namespace: infra-tools
#spec:
#  entryPoints:
#    - web
##    - websecure
#  routes:
#  - match: Host(`gitlab.k8s.local`)
#    kind: Rule
#    services:
#    - name: gitlab-infra-webservice-default
#      port: 8181
