infra/k3s_migration/archive/test/nfs-debug.yaml
apiVersion: v1
kind: Pod

metadata:
  name: nfs-debug-pod
  namespace: pg-apps-homelab-test

spec:
  volumes:
    - name: debug-volume
      persistentVolumeClaim:
        claimName: sqlite-nfs-pvc

  containers:
    - name: writer
      image: busybox
      command: ["/bin/sh", "-c", "echo 'K8s NFS 驗證成功!' > /data/k8s_write_test.txt && sleep 3600"]
      volumeMounts:
        - name: debug-volume
          mountPath: /data
